- run.sh changes are now done in run.conf - run.bat/run.conf do add JAVA_OPTS of all kinds by a property setting (possibly configurable by installer) - PermGen sizes are set to hard-coded values - commented server version support. it is not needed anymore.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireIntegrationJBoss@7547 18c61ebf-f106-0410-9e1e-81fb82415b8f