@@ -92,12 +92,13 @@ public class ServerConfiguratorJBoss
 		return backupFile;
 	}
 
-	public static enum ServerVersion {
-		JBOSS_4_0_x,
-		JBOSS_4_2_x
-	}
-
-	private ServerVersion serverVersion;
+	// due to changes, server version is not needed anymore. 
+	// Please keep the commented enum in the file - it might be useful for later use.
+//	public static enum ServerVersion {
+//		JBOSS_4_0_x,
+//		JBOSS_4_2_x
+//	}
+//	private ServerVersion serverVersion;
 
 	/* (non-Javadoc)
 	 * @see org.nightlabs.jfire.serverconfigurator.ServerConfigurator#doConfigureServer()
@@ -113,19 +114,20 @@ public class ServerConfiguratorJBoss
 			File jbossBaseDir = jbossDeployDir.getParentFile().getParentFile().getParentFile();
 			File jbossBinDir = new File(jbossBaseDir, "bin");
 
-			discoverServerVersion(jbossBaseDir);
-			if (serverVersion == null) {
-				logger.error("Could not find out the server version!", new Exception("Could not find out the server version: jbossDeployDir=" + jbossDeployDir.getAbsolutePath()));
-				return;
-			}
+			// due to changes, server version is not needed anymore. 
+			// Please keep the commented code in the file - it might be useful for later use.
+//			discoverServerVersion(jbossBaseDir);
+//			if (serverVersion == null) {
+//				logger.error("Could not find out the server version!", new Exception("Could not find out the server version: jbossDeployDir=" + jbossDeployDir.getAbsolutePath()));
+//				return;
+//			}
 
 			configureLoginConfigXml(jbossConfDir);
 			configureStandardJBossXml(jbossConfDir);
 			configureJBossjtaPropertiesXml(jbossConfDir);
 			configureJBossServiceXml(jbossConfDir);
 			configureCascadedAuthenticationClientInterceptorProperties(jbossBinDir);
-			configureRunSh(jbossBinDir);
-			configureRunBat(jbossBinDir);
+			configureJavaOpts(jbossBinDir);
 			removeUnneededFiles(jbossDeployDir);
 
 		} catch(Exception e) {
@@ -133,31 +135,33 @@ public class ServerConfiguratorJBoss
 		}
 	}
 
-	private void discoverServerVersion(File jbossBaseDir) throws SAXException, FileNotFoundException, IOException
-	{
-		DOMParser parser = new DOMParser();
-		File jarVersionsFile = new File(jbossBaseDir, "jar-versions.xml");
-		parser.parse(new InputSource(new FileInputStream(jarVersionsFile)));
-		Document document = parser.getDocument();
-		Node node = NLDOMUtil.findNodeByAttribute(document, "jar-versions/jar", "name", "run.jar");
-		if (node == null) {
-			logger.error("File does not contain a node matching path=\"jar-versions/jar\" attributeName=\"name\" attributeValue=\"run.jar\": " + jarVersionsFile.getAbsolutePath());
-			return;
-		}
-
-		String specVersion = NLDOMUtil.getAttributeValue(node, "specVersion");
-		if (specVersion == null) {
-			logger.error("File does contain a node matching path=\"jar-versions/jar\" attributeName=\"name\" attributeValue=\"run.jar\", but it does not have the attribute \"specVersion\": " + jarVersionsFile.getAbsolutePath());
-			return;
-		}
-
-		if (specVersion.startsWith("4.0."))
-			serverVersion=ServerVersion.JBOSS_4_0_x;
-		else if (specVersion.startsWith("4.2."))
-			serverVersion=ServerVersion.JBOSS_4_2_x;
-		else
-			logger.error("File does contain a node matching path=\"jar-versions/jar\" attributeName=\"name\" attributeValue=\"run.jar\", but its attribute \"specVersion\" has the unknown value \"" + specVersion + "\": " + jarVersionsFile.getAbsolutePath());
-	}
+	// due to changes, server version is not needed anymore. 
+	// Please keep the commented method in the file - it might be useful for later use.
+//	private void discoverServerVersion(File jbossBaseDir) throws SAXException, FileNotFoundException, IOException
+//	{
+//		DOMParser parser = new DOMParser();
+//		File jarVersionsFile = new File(jbossBaseDir, "jar-versions.xml");
+//		parser.parse(new InputSource(new FileInputStream(jarVersionsFile)));
+//		Document document = parser.getDocument();
+//		Node node = NLDOMUtil.findNodeByAttribute(document, "jar-versions/jar", "name", "run.jar");
+//		if (node == null) {
+//			logger.error("File does not contain a node matching path=\"jar-versions/jar\" attributeName=\"name\" attributeValue=\"run.jar\": " + jarVersionsFile.getAbsolutePath());
+//			return;
+//		}
+//
+//		String specVersion = NLDOMUtil.getAttributeValue(node, "specVersion");
+//		if (specVersion == null) {
+//			logger.error("File does contain a node matching path=\"jar-versions/jar\" attributeName=\"name\" attributeValue=\"run.jar\", but it does not have the attribute \"specVersion\": " + jarVersionsFile.getAbsolutePath());
+//			return;
+//		}
+//
+//		if (specVersion.startsWith("4.0."))
+//			serverVersion=ServerVersion.JBOSS_4_0_x;
+//		else if (specVersion.startsWith("4.2."))
+//			serverVersion=ServerVersion.JBOSS_4_2_x;
+//		else
+//			logger.error("File does contain a node matching path=\"jar-versions/jar\" attributeName=\"name\" attributeValue=\"run.jar\", but its attribute \"specVersion\" has the unknown value \"" + specVersion + "\": " + jarVersionsFile.getAbsolutePath());
+//	}
 
 	/**
 	 * create ${jboss.bin}/CascadedAuthenticationClientInterceptor.properties if not yet existent
@@ -380,7 +384,7 @@ public class ServerConfiguratorJBoss
 	 * add our JFire security domains to ${jboss.conf]/login-config.xml if necessary
 	 * 
 	 * @param jbossConfDir The JBoss config dir
-	 * @throws FileNotFoundException If the file eas not found
+	 * @throws FileNotFoundException If the file was not found
 	 * @throws IOException In case of an io error
 	 */
 	private void configureLoginConfigXml(File jbossConfDir) throws FileNotFoundException, IOException
@@ -432,188 +436,97 @@ public class ServerConfiguratorJBoss
 			Utils.writeTextFile(destFile, text);
 		}
 	}
-
-	private void configureRunSh(File jbossBinDir) throws FileNotFoundException, IOException
+	
+	/**
+	 * Add custom values to the JAVA_OPTS (by property java.opts)
+	 * and set PermSize.
+	 * @param jbossBinDir The JBoss bin dir
+	 * @throws FileNotFoundException If the file was not found
+	 * @throws IOException In case of an io error
+	 */
+	private void configureJavaOpts(File jbossBinDir) throws FileNotFoundException, IOException
 	{
-		switch (serverVersion) {
-			case JBOSS_4_0_x:
-				configureRunSh_4_0_4(jbossBinDir);
-				break;
-			case JBOSS_4_2_x:
-				configureRunSh_4_2_0(jbossBinDir);
-				break;
+		Properties serverConfiguratorSettings = getJFireServerConfigModule().getJ2ee().getServerConfiguratorSettings();
+		String javaOpts = null;
+		if(serverConfiguratorSettings != null)
+			javaOpts = serverConfiguratorSettings.getProperty("java.opts");
+		if(javaOpts == null)
+			javaOpts = "";
+		
+		// --- TODO: for backwards compatability only - remove in later versions:
+		String rmiHost = serverConfiguratorSettings.getProperty("java.rmi.server.hostname");
+		if (rmiHost != null)
+			javaOpts = "-Djava.rmi.server.hostname="+rmiHost+" "+javaOpts;
+		// ---
 
-			default:
-				throw new IllegalStateException("Unknown server-version: " + serverVersion);
+		// issue #58:
+		javaOpts += " -XX:PermSize=64m -XX:MaxPermSize=128m";
+		
+		configureRunConf(jbossBinDir, javaOpts);
+		configureRunBat(jbossBinDir, javaOpts);
+	}
+	
+	private void configureRunConf(File jbossBinDir, String javaOpts) throws FileNotFoundException, IOException
+	{
+		String optsBegin = "# JAVA_OPTS by JFire server configurator\nJAVA_OPTS=\"$JAVA_OPTS ";
+		String optsEnd = "\"";
+		Pattern oldOpts = Pattern.compile(
+				"^"+Pattern.quote(optsBegin)+"([^\"]*)"+Pattern.compile(optsEnd)+"$", 
+				Pattern.MULTILINE);
+		
+		File destFile = new File(jbossBinDir, "run.conf");
+		String text = Utils.readTextFile(destFile);
+
+		String newSetting = optsBegin+javaOpts+optsEnd+"\n";
+		Matcher m = oldOpts.matcher(text);
+		boolean changed = false;
+		boolean found = m.find();
+		if(found && !m.group(1).equals(javaOpts)) {
+			text = m.replaceFirst(Matcher.quoteReplacement(newSetting));
+			changed = true;
+		} else if(!found) {
+			text += "\n"+newSetting;
+			changed = true;
+		}
+		if(changed) {
+			setRebootRequired(true);
+			backup(destFile);
+			Utils.writeTextFile(destFile, text);
 		}
 	}
 	
-
-	private void configureRunSh_4_2_0(File jbossBinDir) throws FileNotFoundException, IOException
-	{
-		String text;
-		
-		try {
-			Properties serverConfiguratorSettings = getJFireServerConfigModule().getJ2ee().getServerConfiguratorSettings();
-			if(serverConfiguratorSettings == null)
-				return;
-			String rmiHost = serverConfiguratorSettings.getProperty("java.rmi.server.hostname");
-			if(rmiHost == null)
-				rmiHost = "";
-			
-			File destFile = new File(jbossBinDir, "run.sh");
-			text = Utils.readTextFile(destFile);
-			String originalText = "JAVA_OPTS=\"$JAVA_OPTS -Dprogram.name=$PROGNAME\"";
-			String optSetting = "JAVA_OPTS=\"$JAVA_OPTS -Djava.rmi.server.hostname="+rmiHost+"\"";
-			
-			Pattern existingSetting = Pattern.compile("(.*)"+Pattern.quote("JAVA_OPTS=\"$JAVA_OPTS -Djava.rmi.server.hostname=")+"([^\"]+)\"(.*)", Pattern.DOTALL);
-			Matcher matcher = existingSetting.matcher(text);
-			if(matcher.matches()) {
-				if(!rmiHost.equals(matcher.group(2))) {
-					setRebootRequired(true);
-					if("".equals(rmiHost)) {
-						logger.info("File " + destFile.getAbsolutePath() + " does contain a java.rmi.server.hostname setting but none is needed. Removing it...");
-						text = matcher.replaceAll("$1$3");
-					} else {
-						logger.info("File " + destFile.getAbsolutePath() + " does contain the wrong java.rmi.server.hostname setting. Replacing it...");
-						text = matcher.replaceAll("$1"+Matcher.quoteReplacement(optSetting)+"$3");
-					}
-					backup(destFile);
-					try {
-						Utils.writeTextFile(new File(jbossBinDir, "run.sh.jfire"), text);
-					} catch(IOException ignore) {}
-					Utils.writeTextFile(destFile, text);
-				}
-			} else if(!"".equals(rmiHost)) {
-				setRebootRequired(true);
-				logger.info("File " + destFile.getAbsolutePath() + " does not contain the java.rmi.server.hostname setting. Adding it...");
-				String replacementText = 
-						originalText + "\n\n" +
-						"# Setting RMI host for JNDI (auto added by "+getClass().getName()+")\n"+
-						optSetting;
-	
-				text = text.replaceAll(Pattern.quote(originalText), Matcher.quoteReplacement(replacementText));
-				backup(destFile);
-				try {
-					Utils.writeTextFile(new File(jbossBinDir, "run.sh.jfire"), text);
-				} catch(IOException ignore) {}
-				Utils.writeTextFile(destFile, text);
-			}
-		} catch (IOException e) {
-			logger.error("Changing the run.sh file failed. Please set the rmi host by changing the file manually or overwrite it with run.sh.jfire if it exists.");
-		}		
-	}
-
-	private void configureRunSh_4_0_4(File jbossBinDir) throws FileNotFoundException, IOException
-	{
-		String text;
-		
-		try {
-			Properties serverConfiguratorSettings = getJFireServerConfigModule().getJ2ee().getServerConfiguratorSettings();
-			if(serverConfiguratorSettings == null)
-				return;
-			String rmiHost = serverConfiguratorSettings.getProperty("java.rmi.server.hostname");
-			if(rmiHost == null)
-				rmiHost = "";
-			
-			File destFile = new File(jbossBinDir, "run.sh");
-			text = Utils.readTextFile(destFile);
-			String originalText = "JAVA_OPTS=\"$JAVA_OPTS -Dprogram.name=$PROGNAME\"";
-			String optSetting = "JAVA_OPTS=\"$JAVA_OPTS -Djava.rmi.server.hostname="+rmiHost+"\"";
-			
-			Pattern existingSetting = Pattern.compile("(.*)"+Pattern.quote("JAVA_OPTS=\"$JAVA_OPTS -Djava.rmi.server.hostname=")+"([^\"]+)\"(.*)", Pattern.DOTALL);
-			Matcher matcher = existingSetting.matcher(text);
-			if(matcher.matches()) {
-				if(!rmiHost.equals(matcher.group(2))) {
-					setRebootRequired(true);
-					if("".equals(rmiHost)) {
-						logger.info("File " + destFile.getAbsolutePath() + " does contain a java.rmi.server.hostname setting but none is needed. Removing it...");
-						text = matcher.replaceAll("$1$3");
-					} else {
-						logger.info("File " + destFile.getAbsolutePath() + " does contain the wrong java.rmi.server.hostname setting. Replacing it...");
-						text = matcher.replaceAll("$1"+Matcher.quoteReplacement(optSetting)+"$3");
-					}
-					backup(destFile);
-					try {
-						Utils.writeTextFile(new File(jbossBinDir, "run.sh.jfire"), text);
-					} catch(IOException ignore) {}
-					Utils.writeTextFile(destFile, text);
-				}
-			} else if(!"".equals(rmiHost)) {
-				setRebootRequired(true);
-				logger.info("File " + destFile.getAbsolutePath() + " does not contain the java.rmi.server.hostname setting. Adding it...");
-				String replacementText = 
-						originalText + "\n\n" +
-						"# Setting RMI host for JNDI (auto added by "+getClass().getName()+")\n"+
-						optSetting;
-	
-				text = text.replaceAll(Pattern.quote(originalText), Matcher.quoteReplacement(replacementText));
-				backup(destFile);
-				try {
-					Utils.writeTextFile(new File(jbossBinDir, "run.sh.jfire"), text);
-				} catch(IOException ignore) {}
-				Utils.writeTextFile(destFile, text);
-			}
-		} catch (IOException e) {
-			logger.error("Changing the run.bat file failed. Please set the rmi host by changing the file manually or overwrite it with run.sh.jfire if it exists.");
-		}		
-	}
-
-	private void configureRunBat(File jbossBinDir)
+	private void configureRunBat(File jbossBinDir, String javaOpts)
 	{
 		String text;
 		try {
-			Properties serverConfiguratorSettings = getJFireServerConfigModule().getJ2ee().getServerConfiguratorSettings();
-			if (serverConfiguratorSettings == null)
-				return;
-			String rmiHost = serverConfiguratorSettings.getProperty("java.rmi.server.hostname");
-			if (rmiHost == null)
-				rmiHost = "";
-			String optSetting = "set JAVA_OPTS=%JAVA_OPTS% -Djava.rmi.server.hostname="	+ rmiHost + "";
+			Pattern lastJavaOpts = Pattern.compile(".*set JAVA_OPTS.*?\n", Pattern.DOTALL);
+
+			String optsBegin = "rem JAVA_OPTS by JFire server configurator\r\nset JAVA_OPTS=%JAVA_OPTS% ";
+			String optsEnd = "";
+			Pattern oldOpts = Pattern.compile(
+					"^"+Pattern.quote(optsBegin)+"(.*?)"+Pattern.compile(optsEnd)+"$", 
+					Pattern.MULTILINE);
+			
 			File destFile = new File(jbossBinDir, "run.bat");
 			text = Utils.readTextFile(destFile);
-			String originalText = "set JAVA_OPTS=%JAVA_OPTS% -Dprogram.name=%PROGNAME%";
-			Pattern existingSetting = Pattern.compile("(.*)"
-					+ Pattern
-							.quote("set JAVA_OPTS=%JAVA_OPTS% -Djava.rmi.server.hostname=")
-					+ "([^\r\n]+)\r?\n(.*)", Pattern.DOTALL);
-			Matcher matcher = existingSetting.matcher(text);
-			if (matcher.matches()) {
-				if (!rmiHost.equals(matcher.group(2))) {
-					setRebootRequired(true);
-					if ("".equals(rmiHost)) {
-						logger
-								.info("File "
-										+ destFile.getAbsolutePath()
-										+ " does contain a java.rmi.server.hostname setting but none is needed. Removing it...");
-						text = matcher.replaceAll("$1$3");
-					} else {
-						logger
-								.info("File "
-										+ destFile.getAbsolutePath()
-										+ " does contain the wrong java.rmi.server.hostname setting. Replacing it...");
-						text = matcher.replaceAll("$1"
-								+ Matcher.quoteReplacement(optSetting) + "$3");
-					}
-					backup(destFile);
-					Utils.writeTextFile(destFile, text);
-				}
-			} else if (!"".equals(rmiHost)) {
-				setRebootRequired(true);
-				logger
-						.info("File "
-								+ destFile.getAbsolutePath()
-								+ " does not contain the java.rmi.server.hostname setting. Adding it...");
-				String replacementText = originalText + "\r\n\r\n"
-						+ "rem Setting RMI host for JNDI (auto added by "
-						+ getClass().getName() + ")\r\n" + optSetting + "\r\n";
 
-				text = text.replaceAll(Pattern.quote(originalText), Matcher
-						.quoteReplacement(replacementText));
+			String newSetting = optsBegin+javaOpts+optsEnd;
+			Matcher m = oldOpts.matcher(text);
+			boolean changed = false;
+			boolean found = m.find();
+			if(found && !m.group(1).equals(javaOpts)) {
+				System.out.println("change!");
+				text = m.replaceFirst(Matcher.quoteReplacement(newSetting));
+				changed = true;
+			} else if(!found) {
+				System.out.println("new!");
+				Matcher m2 = lastJavaOpts.matcher(text);
+				text = m2.replaceFirst("$0"+Matcher.quoteReplacement("\r\n"+newSetting+"\r\n"));
+				changed = true;
+			}
+			if(changed) {
+				setRebootRequired(true);
 				backup(destFile);
-				try {
-					Utils.writeTextFile(new File(jbossBinDir, "run.bat.jfire"), text, "ISO-8859-1");
-				} catch(IOException ignore) {}
 				Utils.writeTextFile(destFile, text);
 			}
 		} catch (IOException e) {
